[tool.poetry]
name = "slashy-commando"
version = "1.0.0"
description = "Slash Commands Bot"
authors = ["AnshAg2007"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.6.0"
discord-py-slash-command = "^1.0.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
